--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ tw-passage {
  Встал, и пошёл на кухню для того что бы испечь блины, но подметил пропажу         	  главного ингридиента:
 //(text-colour:red)[(text-rotate-x:30)+(text-rotate-y:22)[КАШТАН!!!]]//
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\kandinsky-download-1764423426979.png&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./764423426979.png&quot; / &gt;
 
 
 [[Идти в следующию комнату]]</tw-passagedata><tw-passagedata pid="2" name="Идти в следующию комнату" tags="" position="725,500" size="100,100">Ты встречаешь (text-colour:red)[пса] в зале, и у тебя появляется выбор:
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\a_Лежащая_овчарка_лежи.png&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./a_Лежащая_овчарка_лежи.png&quot; / &gt;
 
 [[Попытаться схватить пса:|Попытаться схватить пса:]]
 
@@ -67,7 +67,7 @@ tw-passage {
 
 }</tw-passagedata><tw-passagedata pid="3" name="Попытаться схватить пса:" tags="" position="500,575" size="100,100">Ты подходишь к псу и у вас начинается драка, (text-colour:red)[ЧТО ТЫ БЛИН ВЫБЕРЕШЬ?]
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765030053463-019af3fd-028e-780a-9533-64f40cbb5c66.jpeg&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765030053463-019af3fd-028e-780a-9533-64f40cbb5c66.jpeg&quot; / &gt;
 
 [[Убежать в комнату|Убежать в комнату]]
 
@@ -79,7 +79,7 @@ tw-passage {
 
 
 }</tw-passagedata><tw-passagedata pid="4" name="Медленно подайти к его будке:" tags="" position="1000,600" size="100,100">Ты подошёл к будке, но (text-colour:red)[он] быстро подбегает к ней и забирает каштан, ты опять идёшь искать его. По пути ты вспоминаешь, что нужно доделать дел по дому, и в темпе вальса ты доходишь до чердака...
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765028027151-019af3dd-f498-7cc7-a46d-9180cf6f5a1e.jpeg&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765028027151-019af3dd-f498-7cc7-a46d-9180cf6f5a1e.jpeg&quot; / &gt;
 
 
 [[Искать дальше]]
@@ -92,7 +92,7 @@ tw-passage {
 
 }</tw-passagedata><tw-passagedata pid="5" name="Искать дальше" tags="" position="750,725" size="100,100">Ты находишь (text-colour:red)[пса] (FINAL BO$$) на чердаке с каштаном в зубах, и у нас есть 3 выбора:
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765030294083-019af400-8fe3-764d-a59f-cc6b82f41796.png&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765030294083-019af400-8fe3-764d-a59f-cc6b82f41796.png&quot; / &gt;
 
 [[Напасть на пса с кулаками:|Напасть на пса с кулаками:]]
 [[Отвлечь его собачим кормом и кинуть его в будку:|Отвлечь его собачим кормом и кинуть его в будку:]]
@@ -107,22 +107,22 @@ tw-passage {
 }
 </tw-passagedata><tw-passagedata pid="6" name="Напасть на пса с кулаками:" tags="" position="1075,925" size="100,100">Из-за серьёзных ранений тебя отвезли в больницу.
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765030968793-019af40a-eb94-7478-b42c-4d5667e636a9.png&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765030968793-019af40a-eb94-7478-b42c-4d5667e636a9.png&quot; / &gt;
 
 (text-colour:red)[Ты умер] (text-rotate-x:40)+(text-rotate-y:13)[idk]</tw-passagedata><tw-passagedata pid="7" name="Отвлечь его собачим кормом и кинуть его в будку:" tags="" position="725,1000" size="100,100">Ты кидаешь корм в его будку, пёс ведётся и ты запираешь его там забирая каштан. Ты испекаешь блины, к этому моменту приходит твоя бабушка и родители, вы вкусно поели и родители забирают тебя домой. (text-colour:red)[The end.]
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765029365090-019af3f2-6304-7419-a857-6f987d3e8e4d.jpeg&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765029365090-019af3f2-6304-7419-a857-6f987d3e8e4d.jpeg&quot; / &gt;
 
 
 
 (text-colour:green)[You win!] (text-colour:#845ef7)[Неплох]</tw-passagedata><tw-passagedata pid="8" name="Кинуть в него камень::" tags="" position="900,900" size="100,100">Из-за этого действия твой пёс умер, тебе дали(text-colour:red)[ 2 года условного срока.]
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765030759163-019af407-a94a-7232-9f82-0787b24a6f17.png&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765030759163-019af407-a94a-7232-9f82-0787b24a6f17.png&quot; / &gt;
 
 
 Делать такого (text-colour:red)[ВООБЩЕ НЕ В КОЕМ СЛУЧЕЕ НЕЛЬЗЯ!!!!]</tw-passagedata><tw-passagedata pid="9" name="Убежать в комнату" tags="" position="350,425" size="100,100">Ты убегаешь в комнату и решаешь дождатся следующего дня.
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765031199454-019af40e-3c12-7945-8c7f-95d6b658df5f.jpeg&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765031199454-019af40e-3c12-7945-8c7f-95d6b658df5f.jpeg&quot; / &gt;
 
 
 [[Проснуться|Начало]]
@@ -134,7 +134,7 @@ tw-passage {
 
 }</tw-passagedata><tw-passagedata pid="10" name="Продолжить драку" tags="" position="350,700" size="100,100">В ходе драки ты (text-colour:red)[умираешь] лол (text-rotate-y:22)+(text-rotate-z:314)[лох].
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\1765031084424-019af40c-c649-7568-bd68-e3d113f86a3c.png&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./1765031084424-019af40c-c649-7568-bd68-e3d113f86a3c.png&quot; / &gt;
 {
 
 (track: &#39;four&#39;, &#39;play&#39;)
@@ -181,7 +181,7 @@ four: piano-for-boss-fight_122025.mp3</tw-passagedata><tw-passagedata pid="12" n
 
 
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;C:\Users\user\Documents\Twine\Истории\69873e7e8c5c8.gif&quot; / &gt;</tw-passagedata></tw-storydata>
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./69873e7e8c5c8.gif&quot; / &gt;</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
