--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ tw-passage {
  Встал, и пошёл на кухню для того что бы испечь блины, но подметил пропажу         	  главного ингридиента:
 //(text-colour:red)[(text-rotate-x:30)+(text-rotate-y:22)[КАШТАН!!!]]//
 
-&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./764423426979.png&quot; / &gt;
+&lt;img style = &quot;height : 50% ; width : 30% &quot; src = &quot;./kandinsky-download-1764423426979.png&quot; / &gt;
 
 
 [[Идти в следующию комнату]]</tw-passagedata><tw-passagedata pid="2" name="Идти в следующию комнату" tags="" position="725,500" size="100,100">Ты встречаешь (text-colour:red)[пса] в зале, и у тебя появляется выбор:
